<resources>
    <string name="app_name">БУМ</string>
    <string name="play">Играть</string>
    <string name="rules">Правила</string>
    <string name="exit">Выход</string>
    <string name="next">Дальше</string>
    <string name="teams_number">Количество команд</string>
    <string name="level">Уровень</string>
    <string name="words_number">Количество слов</string>
    <string name="round_time">Время раунда</string>
    <string name="start_game">Начать игру!</string>
    <string name="start_round">Начать раунд!</string>
    <string name="guessed">Отгадали</string>
    <string name="not_guessed">Не отгадали</string>
    <string name="circle">Круг: </string>
    <string name="round">Раунд: </string>
    <string name="team_play">Играет команда: </string>
    <string name="start_new_game">Начать новую игру</string>
    <string name="winners">Победители:</string>
    <string name="time_end">Время вышло!</string>
</resources>
