<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sasha.myapplication.MainActivity"
    android:background="@color/backgroundColor">

    <Button
        android:layout_width="@dimen/mainBtnWidth"
        android:layout_height="@dimen/mainBtnHeight"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/btnBackgroundColor"
        android:layout_marginBottom="@dimen/margin_bottom" />

    <Button
        android:layout_width="@dimen/mainBtnWidth"
        android:layout_height="@dimen/mainBtnHeight"
        android:text="@string/rules"
        android:id="@+id/rules"
        android:layout_above="@+id/exit"
        android:layout_centerHorizontal="true"
        android:background="@color/btnBackgroundColor"
        android:layout_marginBottom="@dimen/margin_bottom" />

    <Button
        android:layout_width="@dimen/mainBtnWidth"
        android:layout_height="@dimen/mainBtnHeight"
        android:text="@string/play"
        android:id="@+id/play"
        android:layout_above="@+id/rules"
        android:layout_centerHorizontal="true"
        android:background="@color/btnBackgroundColor"
        android:layout_marginBottom="@dimen/margin_bottom" />
</RelativeLayout>
