<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">


    <Button
        android:layout_width="@dimen/mainBtnWidth"
        android:layout_height="@dimen/mainBtnHeight"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/btnBackgroundColor"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:id="@+id/startGameBtn"
        android:text="@string/start_game"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/infoRowHeight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="@dimen/infoMarginLeft"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/words_number"
                android:id="@+id/textWordsNumber"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="70dp"
                android:id="@+id/wordsNumber"
                android:textSize="@dimen/infoTextSize"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/infoRowHeight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="@dimen/infoMarginLeft"
                android:text="@string/level"
                android:id="@+id/textLevelInfo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="160dp"
                android:id="@+id/levelInfo"
                android:text="70"
                android:textSize="@dimen/infoTextSize" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/infoRowHeight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="@dimen/infoMarginLeft"
                android:text="@string/round_time"
                android:id="@+id/textRoundTime"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/infoRowHeight"
                android:layout_marginTop="@dimen/infoMarginTop"
                android:layout_marginLeft="104dp"
                android:id="@+id/RoundTime"
                android:text="60"
                android:textSize="@dimen/infoTextSize" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>