<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <Button
        android:layout_width="@dimen/teamBtnWidth"
        android:layout_height="@dimen/teamBtnHeight"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/btnBackgroundColor"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/next"
        android:id="@+id/nextButton" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/teams_number"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:id="@+id/teamsSeekBar"
                android:layout_gravity="center_horizontal"
                android:max="8"/>

            <TextView
                android:id="@+id/teamsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textSize="20sp"
                android:text="2"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/level"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:id="@+id/levelSeekBar"
                android:layout_gravity="center_horizontal"
                android:max="5"/>

            <TextView
                android:id="@+id/levelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textSize="20sp"
                android:text="1"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>